tests/toylang/neg/001252_mutation.toylang
program a = { sleep 0; } .
